cycle-service-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviceapi
  labels:
    app: serviceapi-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: serviceapi-deploy

---
apiVersion: v1
kind: Service
metadata:
  name: serviceui
  labels:
    app: serviceui-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: serviceui-deploy
  type: LoadBalancer
