cycle-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cycle-ingress
  annotations:
    #ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization,Authentication,access_token,client-key,client-secret,Access-Control-Allow-Headers, Origin,Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers"
spec:
  rules:
  - http:
      paths:
      - path: /kube
        backend:
          serviceName: serviceapi
          servicePort: 8680
